--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "jsonwebtoken": "^8.2.1",
+    "jwt-decode": "^2.2.0",
+    "morgan": "^1.9.0",
+    "mysql2": "^1.5.3",
     "rxjs": "^5.5.6",
+    "sequelize": "^4.37.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
